dist_man1_MANS=

if BUILD_BODYBUILDERD
  dist_man1_MANS+=bodybuilderd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bodybuilder-qt.1
endif

if BUILD_BODYBUILDER_CLI
  dist_man1_MANS+=bodybuilder-cli.1
endif

if BUILD_BODYBUILDER_TX
  dist_man1_MANS+=bodybuilder-tx.1
endif

if BUILD_BODYBUILDER_UTIL
  dist_man1_MANS+=bodybuilder-util.1
endif

if ENABLE_WALLET
if BUILD_BODYBUILDER_WALLET
  dist_man1_MANS+=bodybuilder-wallet.1
endif
endif
